fix: Adjust calendar picker indicator filter for dark mode.

--- a/src/app/components/student-details/student-details.component.css
+++ b/src/app/components/student-details/student-details.component.css
@@ -97,3 +97,9 @@
 .text-center {
     text-align: center;
 }
+
+/* Fix Calendar Picker in Dark Mode */
+:host-context(.dark) input[type="date"]::-webkit-calendar-picker-indicator {
+    filter: brightness(0) invert(1);
+    cursor: pointer;
+}
