--- a/src/app/components/trainer-details/trainer-details.component.css
+++ b/src/app/components/trainer-details/trainer-details.component.css
@@ -25,8 +25,3 @@
 :host-context(.dark) input[type="date"] {
     color-scheme: dark;
 }
-
-:host-context(.dark) input[type="date"]::-webkit-calendar-picker-indicator {
-    filter: invert(1) brightness(100%);
-    cursor: pointer;
-}
